Confiure Github Authentication
Here we integrate with GitHub to authenticate users for Grafana.

See: https://grafana.com/docs/grafana/latest/setup-grafana/configure-security/configure-authentication/github/

--- a/infrastructure/kube/keep-test/monitoring/grafana/grafana-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/grafana-deployment.yaml
@@ -37,6 +37,16 @@ spec:
                 secretKeyRef:
                   name: grafana-auth-google
                   key: client_secret
+            - name: GF_AUTH_GITHUB_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: grafana-auth-github
+                  key: client_id
+            - name: GF_AUTH_GITHUB_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: grafana-auth-github
+                  key: client_secret
           ports:
             - name: grafana
               containerPort: 3000
