--- a/infrastructure/kube/keep-test/monitoring/grafana/config/grafana.ini
+++ b/infrastructure/kube/keep-test/monitoring/grafana/config/grafana.ini
@@ -5,5 +5,15 @@ auth_url = https://accounts.google.com/o/oauth2/auth
 token_url = https://accounts.google.com/o/oauth2/token
 allow_sign_up = true
 
+[auth.github]
+enabled = true
+allow_sign_up = true
+scopes = user:email,read:org
+auth_url = https://github.com/login/oauth/authorize
+token_url = https://github.com/login/oauth/access_token
+api_url = https://api.github.com/user
+allowed_organizations = keep-network threshold-network
+role_attribute_path = contains(groups[*], '@keep-network/developers') && 'Editor' || 'Viewer'
+
 [feature_toggles]
 publicDashboards = true
