Define readiness and liveness probse for trickster
Probes to check trickster instance status.

See: https://github.com/trickstercache/trickster/blob/main/docs/health.md

Note: For readinessProbe we should use `/trickster/health/default`
endpoint, but unfortunately I was unable to get it working correctly. I
was gettin 404.

--- a/infrastructure/kube/keep-test/monitoring/trickster/trickster-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/trickster/trickster-deployment.yaml
@@ -24,6 +24,22 @@ spec:
               containerPort: 8480
             - name: metrics
               containerPort: 8481
+          readinessProbe:
+            httpGet:
+              path: "/trickster/ping"
+              port: trickster
+              scheme: HTTP
+            initialDelaySeconds: 10
+            periodSeconds: 30
+            timeoutSeconds: 2
+          livenessProbe:
+            httpGet:
+              path: "/trickster/ping"
+              port: trickster
+              scheme: HTTP
+            initialDelaySeconds: 10
+            periodSeconds: 30
+            timeoutSeconds: 2
           resources:
             limits:
               cpu: 1000m
