--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -251,7 +251,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: "go.mod"
       - name: Staticcheck
         uses: dominikh/staticcheck-action@v1.2.0
         with:
           version: "2022.1.3"
+          install-go: false
