--- a/infrastructure/kube/keep-test/monitoring/grafana/grafana-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/grafana-deployment.yaml
@@ -51,23 +51,16 @@ spec:
             - name: grafana
               containerPort: 3000
           readinessProbe:
-            failureThreshold: 3
             httpGet:
               path: /api/health
-              port: 3000
-              scheme: HTTP
+              port: grafana
             initialDelaySeconds: 10
             periodSeconds: 30
-            successThreshold: 1
             timeoutSeconds: 2
           livenessProbe:
-            failureThreshold: 3
             initialDelaySeconds: 30
-            periodSeconds: 10
-            successThreshold: 1
             tcpSocket:
-              port: 3000
-            timeoutSeconds: 1
+              port: grafana
           resources:
             limits:
               cpu: 1000m
