Expose prometheus under `/prometheus` resource
We want to expose prometheus API publicly. To do so we need to expose
prometheus at `/prometheus` resource.
Publicly we want to expose it via trickster which works like a caching
proxy.

--- a/infrastructure/kube/keep-test/monitoring/grafana/config/datasources.yaml
+++ b/infrastructure/kube/keep-test/monitoring/grafana/config/datasources.yaml
@@ -5,7 +5,7 @@ datasources:
     access: proxy
     editable: true
     orgId: 1
-    url: http://trickster:8480
+    url: http://trickster:8480/prometheus
     version: 1
     isDefault: true
 
@@ -14,5 +14,5 @@ datasources:
     access: proxy
     editable: true
     orgId: 1
-    url: http://prometheus:9090
+    url: http://prometheus:9090/prometheus
     version: 1
