Add port names to the trickster service

--- a/infrastructure/kube/keep-test/monitoring/trickster/trickster-service.yaml
+++ b/infrastructure/kube/keep-test/monitoring/trickster/trickster-service.yaml
@@ -8,7 +8,9 @@ spec:
     app: trickster
   type: NodePort
   ports:
-    - port: 8480
+    - name: trickster
+      port: 8480
       targetPort: trickster
-    - port: 8481
+    - name: metrics
+      port: 8481
       targetPort: metrics
