Renaming files and adding path to the output file
- Renamed files to rewards.* because now we calculate the actual rewards
- Added license MIT
- Added an option to provide a path to an output rewards json file

--- a/beta-operator-rewards/package.json
+++ b/beta-operator-rewards/package.json
@@ -7,8 +7,9 @@
     "beta-operator-rewards"
   ],
   "scripts": {
-    "rewards-requirements": "ts-node rewards-requirements.ts"
+    "rewards": "ts-node rewards.ts"
   },
+  "license": "MIT",
   "dependencies": {
     "@keep-network/tbtc-v2": "0.1.1-goerli.6",
     "axios": "^0.27.2",
