Increase scan timeout to 3 seconds
1 second was too agressive, as some nodes were failing scanning due to
  long response time.

--- a/infrastructure/kube/keep-prd/monitoring/prometheus/prometheus-deployment.yaml
+++ b/infrastructure/kube/keep-prd/monitoring/prometheus/prometheus-deployment.yaml
@@ -66,6 +66,7 @@ spec:
             - --source.address=bst-a01.tbtc.boar.network:9601
             - --source.address=bst-b01.tbtc.boar.network:9601
             - --refresh.interval=5m
+            - --scan.timeout=3s
             - --log.json
           resources:
             limits:
