--- a/beta-operator-rewards/package.json
+++ b/beta-operator-rewards/package.json
@@ -11,11 +11,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@keep-network/tbtc-v2": "0.1.1-goerli.6",
-    "axios": "^0.27.2",
-    "ethers": "^5.7.1"
+    "@threshold-network/solidity-contracts": "1.2.1",
+    "@keep-network/random-beacon": "2.0.0",
+    "@keep-network/ecdsa": "2.0.0"
   },
   "devDependencies": {
+    "axios": "^0.27.2",
+    "ethers": "^5.7.1",
     "@types/node": "^18.7.23",
     "commander": "^9.4.0",
     "ts-node": "^10.9.1",
