--- a/test/config.yaml
+++ b/test/config.yaml
@@ -7,6 +7,10 @@ Ethereum:
   ConcurrencyLimit: 56
   MaxGasFeeCap: 148 Gwei
   BalanceAlertThreshold: 2.3 ether
+Bitcoin:
+  URL: "url.to.bitcoin:18332"
+  Username: "user"
+  Password: pass
 Network:
   Port: 27001
   Peers:
@@ -22,6 +26,8 @@ ClientInfo:
   Port: 3498
   NetworkMetricsTick: "43s"
   EthereumMetricsTick: "1m27s"
+Maintainer:
+  Relay: true
 Developer:
   RandomBeaconAddress: "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
   WalletRegistryAddress: "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
