--- a/test/config_no_contracts.toml
+++ b/test/config_no_contracts.toml
@@ -4,6 +4,11 @@
 URL = "wss://infura.io/mainnet/ABCDEFG"
 KeyFile = "/tmp/UTC--2018-03-11T01-37-33.202765887Z--c2a56884538778bacd91aa5bf343bf882c5fb18b"
 
+[Bitcoin]
+URL = "url.to.bitcoin:18332"
+Username = "user"
+Password = "pass"
+
 [Network]
 Port = 27001
 
