Replaced Bitcoin configuration options with Electrum

--- a/test/config.toml
+++ b/test/config.toml
@@ -10,8 +10,8 @@ ConcurrencyLimit = 56
 MaxGasFeeCap = "148 Gwei"
 BalanceAlertThreshold = "2.3 ether"
 
-[bitcoin]
-URL = "url.to.bitcoin:18332"
+[electrum]
+URL = "url.to.electrum:18332"
 Username = "user"
 Password = "pass"
 
