--- a/test/config_flags.toml
+++ b/test/config_flags.toml
@@ -5,9 +5,9 @@
 # KeyFile is expected to be overwritten by a flag.
 KeyFile = "/tmp/UTC--2018-03-11T01-37-33.202765887Z--c2a56884538778bacd91aa5bf343bf882c5fb18b"
 
-[bitcoin]
+[electrum]
 # URL is expected to be overwritten by a flag.
-URL = "another.url.to.bitcoin"
+URL = "another.url.to.electrum:18332"
 # Username is expected to be provided as a flag.
 # Password is expected to be read from the file, not passed as a flag.
 Password = "pass"
