--- a/test/config_no_password.toml
+++ b/test/config_no_password.toml
@@ -4,8 +4,8 @@
 URL = "wss://infura.io/mainnet/ABCDEFG"
 KeyFile = "/tmp/UTC--2018-03-11T01-37-33.202765887Z--c2a56884538778bacd91aa5bf343bf882c5fb18b"
 
-[Bitcoin]
-URL = "url.to.bitcoin:18332"
+[Electrum]
+URL = "url.to.electrum:18332"
 Username = "user"
 Password = "pass"
 
