Replaced Electrum configuration options with Electrs

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -7,10 +7,10 @@ Ethereum:
   ConcurrencyLimit: 56
   MaxGasFeeCap: 148 Gwei
   BalanceAlertThreshold: 2.3 ether
-Electrum:
-  URL: "url.to.electrum:18332"
-  Username: "user"
-  Password: pass
+Electrs:
+  URL: "url.to.electrs:18332"
+  RequestTimeout: "500ms"
+  RetryTimeout: "10s"
 Network:
   Port: 27001
   Peers:
