--- a/test/config.toml
+++ b/test/config.toml
@@ -10,10 +10,10 @@ ConcurrencyLimit = 56
 MaxGasFeeCap = "148 Gwei"
 BalanceAlertThreshold = "2.3 ether"
 
-[electrum]
-URL = "url.to.electrum:18332"
-Username = "user"
-Password = "pass"
+[Electrs]
+URL = "url.to.electrs:18332"
+RequestTimeout = "500ms"
+RetryTimeout = "10s"
 
 [network]
 Port = 27001
