--- a/test/config_mixed_contracts.toml
+++ b/test/config_mixed_contracts.toml
@@ -4,10 +4,10 @@
 URL = "wss://infura.io/mainnet/ABCDEFG"
 KeyFile = "/tmp/UTC--2018-03-11T01-37-33.202765887Z--c2a56884538778bacd91aa5bf343bf882c5fb18b"
 
-[Electrum]
-URL = "url.to.electrum:18332"
-Username = "user"
-Password = "pass"
+[Electrs]
+URL = "url.to.electrs:18332"
+RequestTimeout = "500ms"
+RetryTimeout = "10s"
 
 [Network]
 Port = 27001
