Brought back changes related to tbtc bindings generation

--- a/pkg/chain/ethereum/tbtc/gen/Makefile
+++ b/pkg/chain/ethereum/tbtc/gen/Makefile
@@ -1,6 +1,6 @@
 npm_package_name=@keep-network/tbtc-v2
 
 # Contracts for which the bindings should be generated.
-required_contracts := Bridge LightRelay
+required_contracts := Bridge
 
 include ../../common/gen/Makefile
