Refactor Merkle dist scripts
Having a "script" folder and a "src" folder can be confusing, especially
when code of both folders are related.

This refactoring intends to show a more clear architecture for scripts,
sorting all of them behind the src/ folder umbrella.

Also, package.json file of PRE rewards code has been deleted and all the
dependencies has been added to the main package.json (in the repo root)
in order to have a more clear vision of how the scripts work and a
better modularization of the code. This also simplifies the execution of
gem_rewards_dist script, since previously it was needed to run npm
install twice, one time for the main NPM package, and again for the
pre-rewards NPM package.

Readme file has been updated also.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.8",
     "keccak256": "^1.0.6",
-    "merkletreejs": "^0.2.32"
+    "merkletreejs": "^0.2.32",
+    "isomorphic-unfetch": "^3.1.0",
+    "graphql": "^16.5.0"
   },
   "dependencies": {
     "@thesis/solidity-contracts": "github:thesis/solidity-contracts#4985bcf",
