--- a/test/config.yaml
+++ b/test/config.yaml
@@ -27,3 +27,4 @@ Developer:
   WalletRegistryAddress: "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
   TokenStakingAddress: "0xa363a197f1bbb8877f50350234e3f15fb4175457"
   BridgeAddress: "0x138D2a0c87BA9f6BE1DCc13D6224A6aCE9B6b6F0"
+  LightRelayAddress: "0x68e20afD773fDF1231B5cbFeA7040e73e79cAc36"
