--- a/test/config.toml
+++ b/test/config.toml
@@ -33,7 +33,7 @@ NetworkMetricsTick = "43s"
 EthereumMetricsTick = "1m27s"
 
 [maintainer]
-Relay = true
+BitcoinDifficulty = true
 
 [developer]
 RandomBeaconAddress = "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
