--- a/test/config.yaml
+++ b/test/config.yaml
@@ -27,7 +27,7 @@ ClientInfo:
   NetworkMetricsTick: "43s"
   EthereumMetricsTick: "1m27s"
 Maintainer:
-  Relay: true
+  BitcoinDifficulty: true
 Developer:
   RandomBeaconAddress: "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
   WalletRegistryAddress: "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
