Making a rule to ignore generated addresses more general

--- a/.dockerignore
+++ b/.dockerignore
@@ -36,6 +36,7 @@ token-tracker/
 # We won't generate new bindings in the docker build process, but use the existing ones.
 !pkg/chain/gen
 
-pkg/chain/ethereum/threshold/gen/_address/TokenStaking
-pkg/chain/ethereum/beacon/gen/_address/RandomBeacon
-pkg/chain/ethereum/ecdsa/gen/_address/WalletRegistry
+# Contract addresses.
+# We do not want to overwrite extracted contract addresses with empty content while
+# coping local root directory to docker image context.
+**/gen/_address/*
