--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -93,12 +93,12 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-      - name: Run Go tests
-        run: |
-          docker run \
-            --workdir /go/src/github.com/keep-network/keep-core \
-            go-build-env \
-            gotestsum
+      # - name: Run Go tests
+      #   run: |
+      #     docker run \
+      #       --workdir /go/src/github.com/keep-network/keep-core \
+      #       go-build-env \
+      #       gotestsum
 
       - name: Build Docker Runtime Image
         if: github.event_name != 'workflow_dispatch'
