--- a/pkg/chain/ethereum/tbtc/gen/Makefile
+++ b/pkg/chain/ethereum/tbtc/gen/Makefile
@@ -1,6 +1,7 @@
 npm_package_name=@keep-network/tbtc-v2
 
 # Contracts for which the bindings should be generated.
-required_contracts := Bridge
+# TODO: Add the Bridge contract to required contracts
+required_contracts := LightRelay #Bridge
 
 include ../../common/gen/Makefile
