--- a/test/config.yaml
+++ b/test/config.yaml
@@ -10,6 +10,12 @@ Ethereum:
 Bitcoin:
   Electrum:
     URL: "url.to.electrum:18332"
+    Protocol: ssl
+    ConnectTimeout: 54s
+    ConnectRetryTimeout: 3m12s
+    RequestTimeout: 1m34s
+    RequestRetryTimeout: 5m
+    KeepAliveInterval: 12m
 Network:
   Port: 27001
   Peers:
