Run Solidity workflows also after changes to workflow files
We're changing workflows configs so that the workflows would be triggered also
on changes to their config. This way we should be able to easily see if changes
to the workflow don't break anything (note that this does not apply to jobs that
are triggered only by the `workflow_dispatch` event - as this job publishes
important packages, we need more thoughtful approach to testing the changes
there).

--- a/.github/workflows/contracts-ecdsa.yml
+++ b/.github/workflows/contracts-ecdsa.yml
@@ -8,6 +8,7 @@ on:
       - main
     paths:
       - "solidity/ecdsa/**"
+      - ".github/workflows/contracts-ecdsa.yml"
   pull_request:
   # We intend to use `workflow dispatch` in two different situations/paths:
   # 1. If a workflow will be manually dispatched from branch named
@@ -52,6 +53,7 @@ jobs:
           filters: |
             path-filter:
               - './solidity/ecdsa/**'
+              - './.github/workflows/contracts-ecdsa.yml'
 
   contracts-lint:
     needs: contracts-detect-changes
