Point pre-commit-golang rev to commit merging staticcheck hook
We've merged changes adding `staticcheck` hook to the main branch of
keep-network/pre-commit-golang.git. Now we update the `rev` value in the
pre-commit-config.yaml to point to the merge commit sha.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
  - repo: https://github.com/keep-network/pre-commit-golang.git
-   rev: 979f199 # update after merging https://github.com/keep-network/pre-commit-golang/pull/5 
+   rev: 466ade9296d8445d520ec7ab246a30cfa8a07b71
    hooks:
     - id: go-imports
     - id: go-vet
