Uncommented code generation for the Bridge smart contract

--- a/pkg/chain/ethereum/tbtc/gen/Makefile
+++ b/pkg/chain/ethereum/tbtc/gen/Makefile
@@ -1,7 +1,6 @@
 npm_package_name=@keep-network/tbtc-v2
 
 # Contracts for which the bindings should be generated.
-# TODO: Add the Bridge contract to required contracts
-required_contracts := LightRelay #Bridge
+required_contracts := Bridge LightRelay
 
 include ../../common/gen/Makefile
