--- a/test/config.yaml
+++ b/test/config.yaml
@@ -34,6 +34,7 @@ ClientInfo:
 Tbtc:
   Maintainer:
     BitcoinDifficulty: true
+    Wallet: true
 Developer:
   RandomBeaconAddress: "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
   WalletRegistryAddress: "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
